<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".editModule.EditStoreFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/common_padding_default">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilStoreName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_store_name"
            app:helperText="@string/common_helper_required"
            app:endIconMode="clear_text"
            app:counterMaxLength="@integer/counter_store_name_max_name"
            app:counterEnabled="true"
            app:startIconDrawable="@drawable/ic_store"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etStoreName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@integer/counter_store_name_max_name"
                android:inputType="textCapWords"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/hint_store_phone"
            app:helperText="@string/common_helper_required"
            app:endIconMode="clear_text"
            app:counterMaxLength="@integer/counter_store_name_max_phone"
            app:counterEnabled="true"
            app:startIconDrawable="@drawable/ic_local_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@integer/counter_store_name_max_phone"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilWebsite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/hint_store_website"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_insert_link"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etWebsite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textColor="@color/color_link"
                android:maxLines="@integer/lines_store_website"
                android:minLines="@integer/lines_store_website" />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/common_padding_default">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPhotoUrl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_store_photo_url"
                app:endIconMode="clear_text"
                app:helperText="@string/common_helper_required"

                app:startIconDrawable="@drawable/ic_insert_link"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhotoUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="@integer/lines_store_photo"
                    android:minLines="@integer/lines_store_photo"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:textColor="@color/color_link" />
            </com.google.android.material.textfield.TextInputLayout>
            <ImageView
                android:id="@+id/ivPhoto"
                android:layout_width="@dimen/store_photo_size_zoom"
                android:layout_height="@dimen/store_photo_size_zoom"
                android:layout_marginStart="@dimen/common_padding_default"
                android:src="@drawable/ic_image"/>
        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>